--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,18 +1,45 @@
-<!--
 <ion-header>
   <ion-toolbar>
     <ion-title>Pokédex</ion-title>
   </ion-toolbar>
 </ion-header>
 
+<ion-content class="ion-padding">
 
+  <!-- Buscador centrado -->
+  <div class="busqueda-container">
+    <ion-card>
+      <ion-card-content>
+        <ion-input
+          [(ngModel)]="pokemonName"
+          placeholder="Ingrese el nombre del pokémon buscado"
+          type="text">
+        </ion-input>
+        
+        <ion-button expand="block" (click)="getPokemonData(pokemonName)">
+          Buscar
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <!-- Resultado del buscador -->
+  <div *ngIf="pokemonData && pokemonData.name" class="pokemon-detalle">
+    <h2>{{ pokemonData.name | titlecase }}</h2>
+    <img class="pokemon-img" [src]="pokemonData.sprites.front_default" alt="Sprite del Pokémon" />
+    <p><strong>Altura:</strong> {{ pokemonData.height }}</p>
+    <p><strong>Peso:</strong> {{ pokemonData.weight }}</p>
 
+    <p><strong>Tipo(s):</strong></p>
+      <h4 *ngFor="let tipo of pokemonData.types">
+        - {{ tipo.type.name }}
+      </h4>
+  </div>
 
-<div class="ion-padding">
-  <ion-grid>
+  <!-- Lista de Pokémon cargados -->
+  <ion-grid style="margin: auto;" class="gridPokemon">
     <ion-row>
       <ion-col size="6" *ngFor="let pokemon of pokemons; let i = index">
-        <ion-card>
+        <ion-card class="pokemon-card">
           <img [src]="getImageUrl(i)" alt="{{ pokemon.name }}" />
           <ion-card-header>
             <ion-card-title>{{ pokemon.name | titlecase }}</ion-card-title>
@@ -22,46 +49,12 @@
     </ion-row>
   </ion-grid>
 
+  <!-- Scroll infinito -->
   <ion-infinite-scroll (ionInfinite)="loadPokemons($event)" threshold="100px">
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
       loadingText="Cargando más Pokémon...">
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
-</div>
--->
 
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Pokédex</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<div class="ion-padding">
-  <ion-card>
-    <ion-input
-    [(ngModel)]="pokemonName"
-    placeholder="Ingrese el nombre del pokémon buscado"
-    type="text"
-    size="large">
-    </ion-input>
-    <ion-button (click)="getPokemonData(pokemonName)">
-
-    </ion-button>
-    
-    <h2>{{ pokemonData.name | titlecase }}</h2>
-    <img [src]="pokemonData.sprites.front_default" alt="Sprite del Pokémon" />
-
-    <p><strong>Altura:</strong> {{ pokemonData.height }}</p>
-    <p><strong>Peso:</strong> {{ pokemonData.weight }}</p>
-
-    <p><strong>Tipo(s):</strong></p>
-    <ul>
-      <li *ngFor="let tipo of pokemonData.types">
-        {{ tipo.type.name }}
-      </li>
-    </ul>
-
-  </ion-card>
-      
-</div>
+</ion-content>
